--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "game"
   ],
   "devDependencies": {
-    "gulp": "^3.6.0",
-    "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-istanbul": "^0.9.0",
-    "gulp-jscs": "^1.1.0",
-    "gulp-jshint": "^1.5.3",
-    "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^0.4.5",
-    "jshint-stylish": "^1.0.0",
-    "gulp-babel": "^5.1.0",
-    "babel-core": "^5.5.0"
+    "babel-core": "~5.5.0",
+    "gulp": "~3.6.0",
+    "gulp-babel": "~5.1.0",
+    "gulp-exclude-gitignore": "~1.0.0",
+    "gulp-istanbul": "~0.10.0",
+    "gulp-jscs": "~2.0.0",
+    "gulp-jshint": "~1.5.3",
+    "gulp-mocha": "~2.0.0",
+    "gulp-nsp": "~0.4.5",
+    "gulp-plumber": "~1.0.0",
+    "jshint-stylish": "~2.0.1"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
