--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gulp-mocha": "~2.0.0",
     "gulp-nsp": "~0.4.5",
     "gulp-plumber": "~1.0.0",
-    "jshint-stylish": "~2.0.1"
+    "jshint-stylish": "~2.0.1",
+    "should": "^7.0.2"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
