implemented neighbourhood population

--- a/.jscsrc
+++ b/.jscsrc
@@ -4,7 +4,7 @@
   "requireSpacesInFunctionExpression": {
     "beforeOpeningCurlyBrace": true
   },
-  "disallowMultipleVarDecl": true,
+  "disallowMultipleVarDecl": "exceptUndefined",
   "disallowSpacesInsideArrayBrackets": true,
   "disallowSpacesInsideParentheses": true,
   "disallowSpaceAfterObjectKeys": true,
