--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "gulp-plumber": "~1.0.0",
     "jshint-stylish": "~2.0.1",
     "should": "^7.0.2",
-    "should-sinon": "0.0.3"
+    "should-sinon": "0.0.3",
+    "sinon": "^1.15.4"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
