--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "devDependencies": {
     "babel-core": "~5.5.0",
-    "gulp": "~3.6.0",
+    "gulp": "~3.9.0",
     "gulp-babel": "~5.1.0",
     "gulp-exclude-gitignore": "~1.0.0",
     "gulp-istanbul": "~0.10.0",
@@ -31,7 +31,8 @@
     "jshint-stylish": "~2.0.1",
     "should": "^7.0.2",
     "should-sinon": "0.0.3",
-    "sinon": "^1.15.4"
+    "sinon": "^1.15.4",
+    "gulp-eslint": "~0.15.0"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
