--- a/package.json
+++ b/package.json
@@ -20,19 +20,18 @@
   "devDependencies": {
     "babel-core": "~5.8.0",
     "gulp": "~3.9.0",
-    "gulp-babel": "~5.1.0",
+    "gulp-babel": "~5.2.0",
+    "gulp-eslint": "~1.0.0",
     "gulp-exclude-gitignore": "~1.0.0",
     "gulp-istanbul": "~0.10.0",
     "gulp-jscs": "~2.0.0",
-    "gulp-jshint": "~1.5.3",
-    "gulp-mocha": "~2.0.0",
+    "gulp-mocha": "~2.1.3",
     "gulp-nsp": "~0.4.5",
     "gulp-plumber": "~1.0.0",
     "jshint-stylish": "~2.0.1",
-    "should": "^7.0.2",
+    "should": "~7.0.2",
     "should-sinon": "0.0.3",
-    "sinon": "^1.15.4",
-    "gulp-eslint": "~0.15.0"
+    "sinon": "~1.15.4"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
@@ -40,6 +39,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "lodash": "^3.10.0"
+    "lodash": "~3.10.0"
   }
 }
