--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
   },
   "scripts": {
     "prepublish": "gulp prepublish",
-    "test": "gulp"
+    "test": "gulp",
+    "build": "gulp prepublish",
+    "preversion": "npm test",
+    "version": "npm run build && git add -A dist",
+    "postversion": "git push && git push --tags"
   },
   "license": "MIT",
   "dependencies": {
