--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-plumber": "~1.0.0",
     "jshint-stylish": "~2.0.1",
     "should": "~7.0.2",
+    "should-promised": "^0.3.1",
     "should-sinon": "0.0.3",
     "sinon": "~1.15.4"
   },
@@ -38,11 +39,12 @@
     "test": "gulp",
     "build": "gulp prepublish",
     "preversion": "npm test",
-    "version": "npm run build && git add -A dist",
+    "version": "npm run build && git add -A ../dist",
     "postversion": "git push && git push --tags"
   },
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.9.34",
     "lodash": "~3.10.0"
   }
 }
