--- a/.eslintrc
+++ b/.eslintrc
@@ -31,9 +31,8 @@
         "named": "never"
       }
     ],
-    "space-after-keywords": [
-      2,
-      "always"
+    "keyword-spacing": [
+      2
     ],
     "array-bracket-spacing": [
       2,
@@ -111,7 +110,6 @@
     "eqeqeq": 2,
     "no-alert": 2,
     "no-caller": 2,
-    "no-empty-label": 2,
     "no-extend-native": 2,
     "no-extra-bind": 2,
     "no-fallthrough": 2,
@@ -130,7 +128,7 @@
     "no-octal": 2,
     "no-proto": 2,
     "no-redeclare": 2,
-    "no-return-assign": 2,
+    "no-return-assign": 0,
     "no-script-url": 2,
     "no-sequences": 2,
     "no-unused-expressions": 2,
@@ -169,15 +167,15 @@
         "after": true
       }
     ],
-    "semi": 2,
-    "space-return-throw-case": 2
+    "semi": 2
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
   },
   "env": {
+    "es6": true,
     "node": true,
-    "mocha": true,
-    "es6": true
-  },
-  "ecmaFeatures": {
-    "modules": true
+    "mocha": true
   }
 }
