--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "postversion": "git push && git push --tags"
   },
   "license": "MIT",
+  "engines": {
+    "node" : ">=4"
+  },
   "dependencies": {
     "bluebird": "^3.5.0",
     "lodash": "^4.17.4"
