--- a/.eslintrc
+++ b/.eslintrc
@@ -169,6 +169,7 @@
     ],
     "semi": 2
   },
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module"
