--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   ],
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "gulp": "~3.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
@@ -40,7 +43,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node" : ">=4"
+    "node": ">=4"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
