--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-env": "1.6.0",
+    "eslint-config-google": "0.9.1",
+    "eslint-config-prettier": "2.6.0",
+    "eslint-plugin-node": "5.2.0",
+    "eslint-plugin-prettier": "2.3.1",
     "gulp": "~3.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.1.1",
     "gulp-mocha": "^4.3.1",
-    "jshint-stylish": "^2.2.1",
+    "husky": "0.14.3",
+    "lint-staged": "4.2.3",
+    "prettier": "1.7.4",
     "should": "^11.2.1",
     "should-sinon": "^0.0.5",
     "sinon": "^2.2.0"
@@ -43,10 +48,16 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=4"
+    "node": ">=8"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
     "lodash": "^4.17.4"
+  },
+  "lint-staged": {
+    "{config,src,test}/**/*.js": [
+      "prettier --write --single-quote",
+      "git add"
+    ]
   }
 }
